Redefine JSON file and fuction write(root: Node, name: str)

--- a/treant-js-master/SemanticAnalyzer.html
+++ b/treant-js-master/SemanticAnalyzer.html
@@ -12,7 +12,7 @@
     <!-- javascript -->
     <script type="text/javascript" src="vendor/raphael.js"></script>
     <script type="text/javascript" src="Treant.js"></script>
-	<script type="text/javascript" src="tree.json"></script>
+	<script type="text/javascript" src="SemanticAnalyzer.json"></script>
 	<script type="text/javascript">
 		var chart = new Treant(JSONParsedTree, () => console.log('Tree Loaded') );
 	</script>
